# sinyra-labs

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECRETS_REQUIRED.md  alembic.ini  appscriptiçeriği.md  pyproject.toml  requirements.txt  start-claude.ps1
.agent/: rules.md
.claude/: settings.local.json
.github/workflows/: daily-pipeline.yml  manual-backfill.yml  prompt-eval.yml  test.yml  web-ci.yml
docs/: sinyra-labs-baslangic-plani-v2.1.md  sinyra-labs-rehber.md
docs/prompt-evals/: classify-v2.md
prompts/: p01-scaffold.md  p02-ingestion.md  p03-storage-dedup.md  p04-intelligence.md  p05-synthesis-delivery-gmail.md  p06-github-actions.md
sinyra/: __init__.py  config.py  run.py
sinyra/delivery/: __init__.py
sinyra/ingest/: __init__.py  feeds.yaml  google_news.py  recipients.py  rss.py
sinyra/intelligence/: __init__.py  classifier.py  impact_scorer.py  openai_client.py
sinyra/normalize/: __init__.py  dedup.py  recency.py  schema.py
sinyra/observability/: __init__.py  alerts.py  metrics.py
sinyra/storage/: __init__.py  memory.py  models.py
sinyra/synthesis/: __init__.py  brief.py  trends.py
tests/: conftest.py
tests/__snapshots__/: brief_sample.html
tests/eval/: golden_set.jsonl  test_classifier.py
tests/unit/: test_dedup.py  test_render.py  test_rss.py  test_schema.py
web/: .env.local.example  package-lock.json  package.json  tailwind.config.ts  vercel.json
web/app/: globals.css  layout.tsx  manifest.ts  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
web/lib/: constants.ts  types.ts
(+29 files in other folders)
