[project]
name = "sinyra"
version = "0.1.0"
description = "AI Signal Intelligence Platform — cut through the noise"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "feedparser>=6.0",
    "httpx>=0.27",
    "openai>=1.40",
    "jinja2>=3.1",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.7",
    "structlog>=24.1",
    "PyYAML>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.2",
    "pytest-recording>=0.13",
    "vcrpy>=6.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "types-Jinja2",
    "types-PyYAML",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
